--- a/.github/workflows/hello-world.yaml
+++ b/.github/workflows/hello-world.yaml
@@ -8,6 +8,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: hello
-      run: echo hello
+      run: pwd
     - name: what do we have here?
-      run: ls
+      run: ls ${{github.workspace}}
