Let's try to build the scripts

--- a/.github/workflows/hello-world.yaml
+++ b/.github/workflows/hello-world.yaml
@@ -8,7 +8,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - name: hello
-      run: pwd
-    - name: what do we have here?
-      run: ls ${{github.workspace}}
+    - run: make -C scripts
