--- a/.github/workflows/hello-world.yaml
+++ b/.github/workflows/hello-world.yaml
@@ -8,4 +8,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - run: make -C scripts
+    #- run: make -C scripts
+    - run: apt-get source linux-image-unsigned-$(uname -r)
