--- a/tools/bpf/build
+++ b/tools/bpf/build
@@ -3,7 +3,7 @@
 set -o nounset -o pipefail -o errexit
 
 SCRIPT_DIR=$(readlink -f "$0" | xargs dirname)
-. "$SCRIPT_DIR/fetch.sh"
+. "$SCRIPT_DIR/../fetch.sh"
 
 WD=$(mktemp -d)
 trap 'rm -rf $WD' EXIT
