--- a/hpython/Makefile
+++ b/hpython/Makefile
@@ -1,18 +1,5 @@
 ROOT := $(shell dirname $(realpath $(firstword $(MAKEFILE_LIST))))
-
-TOOLS ?= $(TOOLS)/../scripts
-BPFC ?= $(TOOLS)/bpf/bpfc
-TCC_BUNDLER ?= $(TOOLS)/tcc-bundler
-
-CC = gcc
-TCC ?= 0
-PKG_CONFIG ?= pkg-config
-
-CFLAGS = -Wall -Werror -O2
-LDFLAGS =
-LOG_LEVEL ?= WARN
-EXTRA_CFLAGS ?= -DLOG_LEVEL=LOG_$(LOG_LEVEL)
-EXTRA_LDFLAGS ?=
+include $(ROOT)/../build/common.makefile
 
 PYTHON_PKG ?= python3-embed
 CFLAGS += $(shell $(PKG_CONFIG) --cflags "$(PYTHON_PKG)")
