--- a/.github/workflows/hello-world.yaml
+++ b/.github/workflows/hello-world.yaml
@@ -9,6 +9,8 @@ jobs:
     steps:
     - name: Check out repository code
       uses: actions/checkout@v3
+    - name: Install dependencies
+      run: sudo build/deps
     - name: Build tools
       run: make -C tools
     - name: Build hlua
