--- a/.github/workflows/hello-world.yaml
+++ b/.github/workflows/hello-world.yaml
@@ -9,11 +9,20 @@ jobs:
     steps:
     - name: Check out repository code
       uses: actions/checkout@v3
+    - name: Cache tools
+      id: cache-tools
+      uses: actions/cache@v3
+      env:
+        cache-name: cache-tools
+      with:
+        path: tools/bpf/bpf_*
+        key: ${{runner.os}}-${{env.cache-name}}-${{hashFiles('tools/**/build')}}
+    - if: ${{steps.cache-tools.outputs.cache-hit != 'true'}}
+      name: Build tools
+      run: make -C tools
     - name: Install dependencies
       run: sudo build/deps
-    - name: Build tools
-      run: make -C tools
-    - name: Build hlua
-      run: make -C hlua
-    - name: Build hpython
-      run: make -C hpython
+    #- name: Build hlua
+      #run: make -C hlua
+    #- name: Build hpython
+      #run: make -C hpython
