--- a/.github/workflows/hello-world.yaml
+++ b/.github/workflows/hello-world.yaml
@@ -34,7 +34,8 @@ jobs:
     - name: Archive bundled stand-alone c-files
       uses: actions/upload-artifact@v3
       with:
-        name: stand-alone-c-files
+        name: stand-alone-c-files.${{github.sha}}
+        retention-days: 7
         path: |
           hlua/hlua.c
           hpython/hpython.c
