--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -40,6 +40,7 @@ jobs:
 
     - name: Archive test results
       uses: actions/upload-artifact@v3
+      if: success() || failure()
       with:
         name: tests.${{github.sha}}
         retention-days: 7
