--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -63,6 +63,10 @@ jobs:
         chown -R arch:arch .
         tee -a /etc/sudoers.d/arch <<< "arch ALL = NOPASSWD: $(which pacman)"
 
+    - name: Create PKGBUILD
+      run: ./mk
+      working-directory: build/arch
+
     - name: Build package
       run: sudo -u arch makepkg -si --noconfirm
       working-directory: build/arch
