--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -2,7 +2,7 @@ name: Continuous Dissemination
 on: [ push ]
 
 jobs:
-  build:
+  ubuntu:
     runs-on: ubuntu-22.04
     steps:
     - name: Check out repository code
@@ -47,7 +47,7 @@ jobs:
         path: "*-tests-*.tar.gz"
 
   archlinux:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     container:
       image: archlinux:latest
     steps:
