--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -10,4 +10,31 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
-      - run: echo "do release"
+      - name: Download artifacts
+        uses: actions/github-script@v6
+        with:
+          script: |
+            let allArtifacts = await github.rest.actions.listWorkflowRunArtifacts({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              run_id: context.payload.workflow_run.id,
+            });
+            let matchedArtifacts = allArtifacts.data.artifacts.filter((artifact) => {
+              return artifact.name.startsWith("stand-alone-c-files") || artifact.name.startsWith("PKGBUILD")
+            });
+            let fs = require('fs');
+            for(const artifact of matchedArtifacts) {
+              let download = await github.rest.actions.downloadArtifact({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                artifact_id: artifact.id,
+                archive_format: 'zip',
+              });
+              fs.writeFileSync(`${process.env.GITHUB_WORKSPACE}/${artifact.name}.zip`, Buffer.from(download.data));
+            }
+
+      - name: Unpack artifacts
+        run: |
+          unzip stand-alone-c-files.*.zip
+          unzip PKGBUILD.*.zip
+      - run: find .
