--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -10,8 +10,16 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
-      - name: Check out repository code
+      - name: Checkout repository code
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 1
+
+      - name: Check version
+        id: check-version
+        run: tools/version -C
+
+      - run: echo "${{steps}}"
 
       - run: |
           ARTIFACTS=$GITHUB_WORKSPACE/artifacts
