--- a/tools/Makefile
+++ b/tools/Makefile
@@ -1,9 +1,12 @@
 .PHONY: all
-all: bpf
+all: bpf lib
 
 .PHONY: bpf
 bpf:
 	$(MAKE) -C bpf
+
+lib: lib.c
+	$(CC) -o "$@" "$<" -ldl
 
 .PHONY: clean
 clean:
