--- a/hpython/Makefile
+++ b/hpython/Makefile
@@ -11,7 +11,7 @@ SRC ?= main.c
 .PHONY: build
 build: $(EXE)
 
-$(EXE).c: $(SRC) filter.bpfc landlock.filesc version.c r.h
+$(EXE).c: $(SRC) filter.bpfc landlock.filesc capabilities.c version.c r.h
 	$(SINGLE_FILE) -o "$@" "$<"
 
 landlock.files: Makefile
