--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -25,33 +25,14 @@ jobs:
           mkdir -p "$ARTIFACTS"
           echo "ARTIFACTS=$ARTIFACTS" >> "$GITHUB_ENV"
 
-      - name: Download artifacts
+      - uses: actions/download-artifact@v3
         if: ${{env.RELEASE == '1'}}
-        uses: actions/github-script@v6
         with:
-          script: |
-            let allArtifacts = await github.rest.actions.listWorkflowRunArtifacts({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              run_id: context.payload.workflow_run.id,
-            });
-            let matchedArtifacts = allArtifacts.data.artifacts.filter((artifact) => {
-              return artifact.name.startsWith("dist")
-            });
-            let fs = require('fs');
-            for(const artifact of matchedArtifacts) {
-              let download = await github.rest.actions.downloadArtifact({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                artifact_id: artifact.id,
-                archive_format: 'zip',
-              });
-              console.log(`${process.env.ARTIFACTS}/${artifact.name}.zip`)
-              fs.writeFileSync(`${process.env.ARTIFACTS}/${artifact.name}.zip`, Buffer.from(download.data));
-            }
+          path: artifacts
 
       - name: Create release
         if: ${{env.RELEASE == '1'}}
         run: .github/release
         env:
+          ARTIFACTS: artifacts
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
